# rosidl-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  humble.ignored  kilted.ignored  package.xml  patches.conf  releaser_history.json  rosidl_cmake-extras.cmake  rpm.store  setup.cfg  setup.py  tracks.yaml
.github/workflows/: check-copied-type-description-sources.yaml
cmake/: rosidl_auto_generate_interfaces.cmake  rosidl_generate_interfaces.cmake  rosidl_generator_type_description_generate_interfaces.cmake
debian/: changelog  control  copyright  gbp.conf  rules
include/rosidl_buffer_backend_registry/: backend_utils.hpp
include/rosidl_runtime_c/: message_type_support_struct.h
include/rosidl_runtime_cpp/: traits.hpp
include/rosidl_typesupport_introspection_c/: message_introspection.h
resource/: action__traits.hpp.em  msg__type_support.cpp.em  srv__traits.hpp.em
rosidl_adapter/: CHANGELOG.rst  cli.py  package.xml
rosidl_adapter/resource/: __init__.py
rosidl_adapter/rosidl_adapter/: cli.py  parser.py
rosidl_adapter/rosidl_adapter/resource/: struct.idl.em
rosidl_buffer/: CHANGELOG.rst  CMakeLists.txt  __init__.py  package.xml
rosidl_buffer/include/rosidl_buffer/: buffer.hpp  c_helpers.h  visibility_control.h
rosidl_buffer/src/: c_helpers.cpp
rosidl_buffer/test/: non_cpu_buffer_impl.hpp  test_buffer.cpp  test_c_helpers.cpp
rosidl_buffer_backend/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_buffer_backend/include/rosidl_buffer_backend/: buffer_backend.hpp  buffer_descriptor_ops.hpp  visibility_control.h
rosidl_buffer_backend_registry/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_buffer_backend_registry/include/rosidl_buffer_backend_registry/: buffer_backend_registry.hpp  visibility_control.h
rosidl_buffer_backend_registry/test/: test_buffer_backend_registry.cpp
rosidl_buffer_py/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_buffer_py/rosidl_buffer/: _rosidl_buffer_py.pyi
rosidl_buffer_py/src/: rosidl_buffer_py.cpp
rosidl_cli/: CHANGELOG.rst  cli.py  package.xml  setup.py
rosidl_cli/command/generate/: __init__.py
rosidl_cli/rosidl_cli/: cli.py  extensions.py
rosidl_cli/rosidl_cli/command/: helpers.py
rosidl_cmake/: CHANGELOG.rst  package.xml  rosidl_cmake-extras.cmake
rosidl_cmake/cmake/: rosidl_cmake_aggregate_target-extras.cmake.in  rosidl_cmake_aggregate_target_package_hook.cmake
rosidl_generator_c/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_generator_c/resource/: msg__functions.c.em
rosidl_generator_c/rosidl_generator_c/: cli.py
rosidl_generator_cpp/: CHANGELOG.rst  __init__.py  cli.py  package.xml
rosidl_generator_cpp/resource/: action__traits.hpp.em  idl.hpp.em  idl__struct.hpp.em  idl__traits.hpp.em  msg__struct.hpp.em  msg__traits.hpp.em
rosidl_generator_cpp/rosidl_generator_cpp/: __init__.py
rosidl_generator_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_generator_type_description/: CHANGELOG.rst  CMakeLists.txt  __init__.py  package.xml
rosidl_generator_type_description/rosidl_generator_type_description/: cli.py
rosidl_parser/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_parser/rosidl_parser/: definition.py  parser.py
rosidl_parser/test/: test_parser.py
rosidl_pycommon/: CHANGELOG.rst  interface_base_classes.py  package.xml  setup.py
rosidl_pycommon/rosidl_pycommon/: __init__.py  interface_base_classes.py
rosidl_runtime_c/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_runtime_c/src/: primitives_sequence_functions.c  string_functions.c  u16string_functions.c
rosidl_runtime_c/test/: test_primitives_sequence_functions.cpp
rosidl_runtime_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_typesupport_interface/: CHANGELOG.rst  package.xml
rosidl_typesupport_introspection_c/: CHANGELOG.rst  CMakeLists.txt  cli.py  package.xml
rosidl_typesupport_introspection_c/cmake/: rosidl_typesupport_introspection_c_generate_interfaces.cmake
rosidl_typesupport_introspection_c/resource/: msg__type_support.c.em
rosidl_typesupport_introspection_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_typesupport_introspection_cpp/cmake/: rosidl_typesupport_introspection_cpp_generate_interfaces.cmake
rosidl_typesupport_introspection_cpp/rosidl_typesupport_introspection_cpp/: cli.py
rosidl_typesupport_introspection_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_typesupport_introspection_tests/test/: test_multi_nested_message_introspection.cpp  test_unbounded_sequences_message_introspection.cpp
rpm/: ros-galactic-rosidl-cli.spec  ros-galactic-rosidl-cmake.spec  ros-galactic-rosidl-generator-c.spec  ros-galactic-rosidl-generator-cpp.spec  ros-galactic-rosidl-parser.spec  ros-galactic-rosidl-runtime-c.spec  ros-galactic-rosidl-runtime-cpp.spec  ros-galactic-rosidl-typesupport-interface.spec  ros-galactic-rosidl-typesupport-introspection-c.spec  ros-humble-rosidl-adapter.spec  ros-humble-rosidl-cli.spec  ros-humble-rosidl-cmake.spec  ros-humble-rosidl-generator-c.spec  ros-humble-rosidl-generator-cpp.spec  ros-humble-rosidl-parser.spec  ros-humble-rosidl-runtime-c.spec  ros-humble-rosidl-runtime-cpp.spec  ros-humble-rosidl-typesupport-interface.spec  ros-humble-rosidl-typesupport-introspection-c.spec  ros-humble-rosidl-typesupport-introspection-cpp.spec  ros-iron-rosidl-adapter.spec  ros-iron-rosidl-cli.spec  ros-iron-rosidl-cmake.spec  ros-iron-rosidl-parser.spec  ros-iron-rosidl-pycommon.spec  ros-iron-rosidl-runtime-c.spec  ros-iron-rosidl-runtime-cpp.spec  ros-iron-rosidl-typesupport-introspection-cpp.spec  ros-jazzy-rosidl-adapter.spec  ros-jazzy-rosidl-cli.spec  ros-jazzy-rosidl-cmake.spec  ros-jazzy-rosidl-generator-c.spec  ros-jazzy-rosidl-generator-cpp.spec  ros-jazzy-rosidl-generator-type-description.spec  ros-jazzy-rosidl-parser.spec  ros-jazzy-rosidl-pycommon.spec  ros-jazzy-rosidl-runtime-c.spec  ros-jazzy-rosidl-runtime-cpp.spec  ros-jazzy-rosidl-typesupport-interface.spec  ros-jazzy-rosidl-typesupport-introspection-c.spec  (+46 more)
src/: buffer_backend_registry.cpp
test/: dummy_buffer_backend.hpp
(+21 files in other folders)
