<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_buffer_backend_registry</name>
  <version>5.2.0</version>
  <description>Backend discovery and plugin loading for ROS2 buffer types</description>
  
  <maintainer email="cyc@nvidia.com">CY Chen</maintainer>
  
  <license>Apache License 2.0</license>

  <author email="cyc@nvidia.com">CY Chen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_buffer_backend</depend>
  <depend>rmw</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rosidl_buffer</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

